<resources>
    <string name="app_name">IPTV</string>
    <string name="start_title">Select TS File</string>
    <string name="waiting">Waiting</string>
    <string name="access_denied">WRITE_CONTACTS Denied</string>
    <string name="favorite">Favorite</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="iptv">IPTV</string>
    <string name="about_app">About APP</string>
    <string name="version">V1.3.0</string>
    <string name="check">Check Update</string>
    <string name="live">Live</string>
    <string name="hint">Please input Channel Num</string>
    <string name="cancel">Cancel</string>
    <string name="search_history">Search History</string>
    <string name="file_not_exit">the file not exit......</string>
    <string name="try_again">press again to exit the program</string>
    <string name="no_package_length">the file is not a ts file</string>
    <string name="no_search">Search Result Is None</string>
    <string name="no_favorite">there is no collection,please go to add favorite program</string>

</resources>
