<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.excellence.iptv.activity.AboutFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linearLayout_height_45dp"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/iv_back"
            android:src="@drawable/ic_back"
            android:layout_width="@dimen/layout_width_25dp"
            android:layout_height="@dimen/layout_height_25dp"
            android:layout_marginTop="@dimen/layout_marginTop_10dp"
            android:layout_marginLeft="@dimen/padding_left_9dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@color/colorTextColor"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linearLayout_height_229dp"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/layout_width_213dp"
            android:layout_height="@dimen/layout_height_213dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="@dimen/layout_marginTop_10dp"/>

    </LinearLayout>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iptv"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_30sp"
            android:gravity="center"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
    
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/linearLayout_height_56dp"
        android:layout_marginTop="@dimen/layout_marginTop_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/padding_left_20dp"
            android:layout_marginStart="@dimen/padding_left_20dp"
            android:text="@string/about_app"
            android:textColor="@color/colorTextView"
            android:textSize="@dimen/text_size_16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="@dimen/text_size_16sp"
            android:textColor="@color/colorText"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/layout_marginRight_24dp"
            android:id="@+id/textView" />

    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/linearLayout_height_56dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_size_16sp"
            android:textColor="@color/colorTextView"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/padding_left_20dp"/>

        <ImageView
            android:src="@drawable/arrow_right"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/layout_width_10dp"
            android:layout_height="@dimen/layout_height_17dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/layout_marginRight_24dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linearLayout_height_56dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>